fix: :bug: fixed side menu alignement
Fixed side menu items text alignement.

--- a/src/css/components/menu.scss
+++ b/src/css/components/menu.scss
@@ -5,7 +5,6 @@
     .absolute {
         display: none;
         left: 250%;
-        top: -3px;
     }
 
     &.active,
